# kso-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.dev.yml  flowsettings.py  launch.sh  pyproject.toml  sso_app.py  sso_app_demo.py
scripts/: build_ragbench_dataset.py  run_evaluation.py  run_uv.sh
src/core/: pyproject.toml
src/core/kso_rag_core/: cli.py
src/core/kso_rag_core/agents/: base.py  langchain_based.py  utils.py
src/core/kso_rag_core/base/: component.py  schema.py
src/core/kso_rag_core/chatbot/: base.py
src/core/kso_rag_core/embeddings/: base.py  endpoint_based.py  fastembed.py  langchain_based.py  openai.py  tei_endpoint_embed.py  voyageai.py
src/core/kso_rag_core/evaluation/: __init__.py  deepeval_runner.py  metrics.py  runner.py  schema.py
src/core/kso_rag_core/indices/: base.py  vectorindex.py
src/core/kso_rag_core/llms/: __init__.py  base.py  branching.py  cot.py  linear.py
src/core/kso_rag_core/loaders/: adobe_loader.py  azureai_document_intelligence_loader.py  base.py  docling_loader.py  docx_loader.py  excel_loader.py  html_loader.py  mathpix_loader.py  ocr_loader.py  pdf_loader.py  txt_loader.py  unstructured_loader.py  web_loader.py
src/core/kso_rag_core/parsers/: regex_extractor.py
src/core/kso_rag_core/rerankings/: cohere.py  tei_fast_rerank.py  voyageai.py
src/ui/: pyproject.toml
src/ui/kso_rag_ui/: app.py  components.py  exceptions.py  extension_protocol.py  main.py
src/ui/kso_rag_ui/assets/: __init__.py  theme.py
src/ui/migrations/: README  env.py
(+102 files in other folders)
